--- a/app/src/main/res/layout/fragment_temperature_setting.xml
+++ b/app/src/main/res/layout/fragment_temperature_setting.xml
@@ -44,8 +44,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/snackBar"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="365dp"
@@ -54,18 +54,9 @@
 
         </LinearLayout>
 
-        <TextView
-            android:text="@string/deleteLabel"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="240dp"
-            android:textSize="15sp"
-            android:id="@+id/deleteTempLabel" />
-
         <EditText
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
+            android:layout_width="133dp"
+            android:layout_height="54dp"
             android:layout_marginTop="245dp"
             android:ems="10"
             android:id="@+id/deleteInput"
@@ -75,9 +66,18 @@
         <Button
             android:text="@string/delete"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="58dp"
             android:layout_marginTop="280dp"
             android:id="@+id/deleteButton" />
+
+        <TextView
+            android:text="@string/deleteLabel"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="28dp"
+            android:layout_marginTop="240dp"
+            android:textSize="15sp"
+            android:id="@+id/deleteTempLabel" />
 
     </android.support.design.widget.CoordinatorLayout>
 
